# Trade360Lab-Strategies

./: .gitignore  CONTRIBUTING.md  README.md  STRATEGY_SPEC.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
bots/BTC (Analyzer)/: .env.example  .gitignore  Dockerfile  README.md  binance_loader.py  docker-compose.yml  predictor.py  reporter.py  requirements.txt  run_daily_bot.py  run_daily_boy.py  settings.py
bots/BTC (Analyzer)/app/: __init__.py  reporter.py  runtime.py
bots/PullbackTrader/: .env.example  Dockerfile  README.md  Strategy.ipynb  docker-compose.yml
bots/RSIChaikBot/: .env.example  Dockerfile  README.md  Strategy.ipynb  docker-compose.yml
examples/: donchian_breakout.json  ema_cross.json  rsi_reversion.json
indicators/: __init__.py
indicators/momentum/: __init__.py  rsi.py
indicators/trend/: __init__.py  donchian.py  ema.py
indicators/volatility/: __init__.py  atr.py  bollinger.py
indicators/volume/: __init__.py
shared/: __init__.py  base_strategy.py  manifest_schema.py  params.py  registry.py  signals.py  types.py  validation.py
strategies/: __init__.py
strategies/breakout/: __init__.py
strategies/mean_reversion/: __init__.py
strategies/trend/: __init__.py
templates/WorkingExample/: Dockerfile  docker-compose.yml  requirements.txt
templates/example_1/: .env
tests/: conftest.py
tests/fixtures/: ohlcv_fixture.py
tests/integration/: test_registry_integration.py
tests/unit/: test_base_strategy.py  test_indicators.py  test_manifest_schema.py  test_registry.py  test_signals.py
(+69 files in other folders)
