[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade360lab-strategies"
version = "0.1.0"
description = "Manifest-driven trading strategy library for Trade360Lab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Trade360Lab" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["indicators", "shared", "tests"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

